Fixing AppImage geeration